# oblivious

./: .gitignore  .gitmodules  Makefile  README.md  b  bi.sh
arch/x86/entry/syscalls/: syscall_64.tbl
arch/x86/include/asm/: pgtable.h
arch/x86/mm/: fault.c
example/: Makefile  cli.sh  fault.c  kevictd.c  kevictd.h  leap_functionality.c  page_buffer.c  page_buffer.h  ring_buffer.h  tracing.h  utils.c  utils.h
experiments/: benchmark.sh  feb_25_experiments.sh  ftrace_functions  run_cgroup.sh  set_cgroup.sh
experiments/analysis/: experiment_helpers.py  oblivious.ipynb
experiments/cpp/: .gitignore  Makefile  mem_pattern_trace.h  mmap_random_rw.cpp  mmult_eigen.cpp  sort.cpp  sparse_eigen.cpp
experiments/cpp/torch_example/: CMakeLists.txt  Readme.md  example-app.cpp  infer.cpp  infer20.cpp  modelsimpl.h
experiments/python/: mem_pattern_trace.py  mmap_random.py  mmult.py  nn.py  sci.py
include/linux/: frontswap.h  injections.h  mm.h  mmzone.h  rmap.h  sched.h  syscalls.h  task_struct_oblivious.h  uts.h
injector/: Makefile  README.md  cli.sh  common.c  common.h  evict.c  evict.h  fastswap_bench.h  fetch.c  fetch.h  kevictd.c  kevictd.h  mem_pattern_trace.h  module_entry.c  page_buffer.c  page_buffer.h  record.c  record.h
kernel/: exit.c  fork.c
mm/: Makefile  frontswap.c  injections.c  memcontrol.c  memory.c  mmzone.c  page_io.c  rmap.c  swap.c  swap_state.c  swapfile.c  vmscan.c
scripts/: decode_stacktrace.sh  dmesg_decoder.sh
tracer/: Makefile  README.md  augheapq.py  postprocess.py  tracer.c  tracer.h  util.py
